--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <button><img src="assets/search.png" alt="Search" /></button>
       </div>
 
+      <div class="error">
+        <p>Invalid City Name</p>
+      </div>
+
       <div class="weather">
         <img src="assets/rain.png" class="weather-icon" />
         <h1 class="temp">22°C</h1>
@@ -40,16 +44,48 @@
     <script>
       const apiKey = "456b7d3cc897b79917f15e7118f0465c";
       const apiUrl =
-        "https://api.openweathermap.org/data/2.5/weather?units=metric&q=berlin";
+        "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
 
-      async function checkWeather() {
-        const response = await fetch(apiUrl + `&appid=${apiKey}`);
-        var data = await response.json();
+      const searchBox = document.querySelector(".search input");
+      const searchBtn = document.querySelector(".search button");
+      const weatherIcon = document.querySelector(".weather-icon");
 
-        console.log(data);
+      async function checkWeather(city) {
+        const response = await fetch(apiUrl + city + `&appid=${apiKey}`);
+
+        if (response.status == 404) {
+          document.querySelector(".error").style.display = "block";
+          document.querySelector(".weather").style.display = "none";
+        } else {
+          var data = await response.json();
+
+          document.querySelector(".city").innerHTML = data.name;
+          document.querySelector(".temp").innerHTML =
+            Math.round(data.main.temp) + "°C";
+          document.querySelector(".humidity").innerHTML =
+            data.main.humidity + "%";
+          document.querySelector(".wind").innerHTML = data.wind.speed + "km/h";
+
+          if (data.weather[0].main == "Clouds") {
+            weatherIcon.src = "assets/clouds.png";
+          } else if (data.weather[0].main == "Clear") {
+            weatherIcon.src = "assets/clear.png";
+          } else if (data.weather[0].main == "Rain") {
+            weatherIcon.src = "assets/rain.png";
+          } else if (data.weather[0].main == "Drizzle") {
+            weatherIcon.src = "assets/drizzle.png";
+          } else if (data.weather[0].main == "Mist") {
+            weatherIcon.src = "assets/mist.png";
+          }
+
+          document.querySelector(".weather").style.display = "block";
+          document.querySelector(".error").style.display = "none";
+        }
       }
 
-      checkWeather();
+      searchBtn.addEventListener("click", () => {
+        checkWeather(searchBox.value);
+      });
     </script>
   </body>
 </html>
